--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: windows-latest
 
     env:
-      Solution_Name: Server/Server/Server.sln 
+      Solution_Name: Server/Server.sln 
       Test_Project_Path: your-test-project-path
       Wap_Project_Directory: your-wap-project-directory-name
       Wap_Project_Path: your-wap-project-path
