--- a/Client/app.json
+++ b/Client/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Client2",
-    "slug": "Client2",
+    "name": "Client",
+    "slug": "Client",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -11,6 +11,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "scheme": "Evento",
     "ios": {
       "supportsTablet": true
     },
@@ -22,6 +23,9 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
