--- a/Client/package.json
+++ b/Client/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "client2",
+  "name": "client",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,19 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/config": "^8.1.1",
-    "@expo/metro-config": "^0.10.0",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-gesture-handler": "^2.18.1"
+    "expo-router": "~3.5.23",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "expo-linking": "~6.3.1",
+    "expo-constants": "~16.0.2",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "@types/react-native": "^0.73.0",
-    "typescript": "^5.1.3"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
