--- a/Client/package.json
+++ b/Client/package.json
@@ -18,7 +18,8 @@
     "react-native-screens": "3.31.1",
     "expo-linking": "~6.3.1",
     "expo-constants": "~16.0.2",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "react-native-maps": "1.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
