--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-﻿################################################################################
+################################################################################
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
 /Server/.vs
 /Server/Server/appsettings.json
+/Server/Server/bin
+/Server/Server/obj
