--- a/Client/package.json
+++ b/Client/package.json
@@ -15,6 +15,7 @@
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.13.0",
     "libphonenumber-js": "^1.11.7",
     "react": "18.2.0",
     "react-native": "0.74.5",
