--- a/Client/package.json
+++ b/Client/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
+    "axios": "^1.7.5",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-image-picker": "~15.0.7",
