--- a/Client/package.json
+++ b/Client/package.json
@@ -25,6 +25,8 @@
     "pod-install": "^0.2.2",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-expo-modal-select": "^0.1.4",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "1.14.0",
     "react-native-safe-area-context": "4.10.5",
