--- a/Client/package.json
+++ b/Client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "^8.0.1",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.7.5",
@@ -28,7 +29,9 @@
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-expo-modal-select": "^0.1.4",
     "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.14.0",
+    "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10"
