--- a/Client/package.json
+++ b/Client/package.json
@@ -28,6 +28,7 @@
     "react-native": "0.74.5",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-expo-modal-select": "^0.1.4",
+    "react-native-geocoding": "^0.5.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.14.0",
